--- a/gb/20/10/24/n12498883.md
+++ b/gb/20/10/24/n12498883.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cemvup3479/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/cemvup3479/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/cemvup3479/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cemvup3479/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cemvup3479/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cemvup3479/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cemvup3479/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cemvup3479/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：公安部副部长杨奇清被关秦城监狱之谜</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-181515561-1-2.jpg" />
 <h6>图为秦城监狱 (Ed Jones/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年10月24日讯】在中国大陆一次“民主与法制”研讨会上，时任中国社会科学院副院长邓力群在发言时说，<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>期间，他曾被关在<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E7%A7%A6%E5%9F%8E%E7%9B%91%E7%8B%B1.md#1">秦城监狱</a>“隔离审查”。这个关押高级政治犯的监狱很有意思，它是<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E5%85%AC%E5%AE%89%E9%83%A8.md#1">公安部</a>副部长杨奇清负责建造的，但是，杨后来也被关了进去。</p>
-<h2>5位<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E5%85%AC%E5%AE%89%E9%83%A8.md#1">公安部</a>副部长被关进<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E7%A7%A6%E5%9F%8E%E7%9B%91%E7%8B%B1.md#1">秦城监狱</a></h2>
-<p>秦城监狱是中国最著名的监狱，又称“中国第一监狱”、“中国最神秘的监狱”，因为那里面关押着中国最高级别的犯人。秦城监狱建于1958年，位于北京市昌平区小汤山镇附近。这里曾关押过满清要员，国民党将军，中共国家主席刘少奇妻子王光美，中共党魁<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>妻子江青等。</p>
+	<p>【大纪元2020年10月24日讯】在中国大陆一次“民主与法制”研讨会上，时任中国社会科学院副院长邓力群在发言时说，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>期间，他曾被关在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A7%A6%E5%9F%8E%E7%9B%91%E7%8B%B1.md#1">秦城监狱</a>“隔离审查”。这个关押高级政治犯的监狱很有意思，它是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AC%E5%AE%89%E9%83%A8.md#1">公安部</a>副部长杨奇清负责建造的，但是，杨后来也被关了进去。</p>
+<h2>5位<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%AC%E5%AE%89%E9%83%A8.md#1">公安部</a>副部长被关进<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A7%A6%E5%9F%8E%E7%9B%91%E7%8B%B1.md#1">秦城监狱</a></h2>
+<p>秦城监狱是中国最著名的监狱，又称“中国第一监狱”、“中国最神秘的监狱”，因为那里面关押着中国最高级别的犯人。秦城监狱建于1958年，位于北京市昌平区小汤山镇附近。这里曾关押过满清要员，国民党将军，中共国家主席刘少奇妻子王光美，中共党魁<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>妻子江青等。</p>
 <p>秦城监狱也是唯一一座不隶属于中共司法部而是隶属中共公安部的监狱。这里还关押过一批中共公安系统的高官，包括五位公安部副部长——徐子荣、汪金祥、凌云、杨奇清、严佑民，以及原北京市公安局长冯基平等。</p>
-<p>杨奇清长期从事中共领导人的保卫工作，曾经救过中共元老<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、周恩来、朱德等人的命。1949年10月1日中共建政后，杨历任公安部副部长兼政治保卫局局长，中共军队总政治部保卫部部长等职，一生参与过四大安保工作——“开国大典”阅兵地点与警卫方案的制定，毛泽东首次出访苏联的护卫，周恩来参加万隆亚非会议的安保，参与了中共建政后一系列特大案件的侦破。</p>
-<p>但是，到后来，他因为得罪毛泽东的妻子江青，毛泽东发动<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>时最得力的帮凶——中央文革小组顾问康生，毛泽东在文革中整人的另一大帮凶——公安部长谢富治，被关进秦城监狱达5年之久。</p>
+<p>杨奇清长期从事中共领导人的保卫工作，曾经救过中共元老<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AF%9B%E6%B3%BD%E4%B8%9C.md#1">毛泽东</a>、周恩来、朱德等人的命。1949年10月1日中共建政后，杨历任公安部副部长兼政治保卫局局长，中共军队总政治部保卫部部长等职，一生参与过四大安保工作——“开国大典”阅兵地点与警卫方案的制定，毛泽东首次出访苏联的护卫，周恩来参加万隆亚非会议的安保，参与了中共建政后一系列特大案件的侦破。</p>
+<p>但是，到后来，他因为得罪毛泽东的妻子江青，毛泽东发动<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E9%9D%A9.md#1">文革</a>时最得力的帮凶——中央文革小组顾问康生，毛泽东在文革中整人的另一大帮凶——公安部长谢富治，被关进秦城监狱达5年之久。</p>
 <h2>杨奇清是怎么得罪江青的？</h2>
 <p>江青有个哥哥叫李干卿。毛泽东进北京后，住进中南海，江青成了中南海的第一夫人。一人得道，鸡犬升天。江青先把她的姐姐李云露接到中南海住，后来又想把他的哥哥李干卿接到中南海住。</p>
 <p>中南海是中共中央国务院所在地，中共最高层官员大都住在中南海。李干卿要进中南海，按规定，也得查一查他的过去。于是，中央领导责成公安部调查此事。这件事具体由副部长杨奇清负责。</p>
@@ -32,49 +32,48 @@
 <p>直到1975年10月，邓小平代替生病的中共总理周恩来，主持中央工作后，一批被关押的老干部陆续恢复工作，杨奇清被重新任命为公安部副部长。但是，由于文革中长期受迫害，杨的身体受到很大损害。1978年11月，杨病逝。</p>
 <h2>结语</h2>
 <p>中共常讲，公、检、法是专政机器。公、检、法官员就是中共的专政工具，需要时，利用利用，不需要了，马上翻脸不认人。即便像杨奇清这样救过毛泽东命的人，中共说关进监狱就关进监狱。</p>
-<p>中共历史上，替中共卖命，被中共<ahref="https://github.com/cemvup3479/djy/blob/master/gb/tag/%E5%8D%B8%E7%A3%A8%E6%9D%80%E9%A9%B4.md#1">卸磨杀驴</a>的案例实在是太多了。杨清奇被关秦城监狱的悲剧，是当今继续替中共卖命者的重要镜鉴。</p>
+<p>中共历史上，替中共卖命，被中共<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%B8%E7%A3%A8%E6%9D%80%E9%A9%B4.md#1">卸磨杀驴</a>的案例实在是太多了。杨清奇被关秦城监狱的悲剧，是当今继续替中共卖命者的重要镜鉴。</p>
 <p>责任编辑：高义</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/9/25/n12431207.md#1">王友群：中宣部长陆定一文革被关秦城监狱之谜</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/4/n12452549.md#1">王友群：中共上将张爱萍文革中差点被“毒死”</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/9/n12465303.md#1">王友群：中共海军副司令陶勇“投井自杀”之谜</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/16/n12481413.md#1">王友群：先帮中共使劲整人后被整死的吴晗</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/9/25/n12431207.md#1">王友群：中宣部长陆定一文革被关秦城监狱之谜</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/4/n12452549.md#1">王友群：中共上将张爱萍文革中差点被“毒死”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/9/n12465303.md#1">王友群：中共海军副司令陶勇“投井自杀”之谜</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/16/n12481413.md#1">王友群：先帮中共使劲整人后被整死的吴晗</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/25/n9768373.md#1" target="_blank">北京女三中第一个共产党员的悲剧人生</a></li><li><a href="https://github.com/cemvup3479/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787288.md#1" target="_blank">一名高干子弟给习近平公开信曝酷刑及逼供秘闻</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/6/n10894661.md#1" target="_blank">林傲霜：为了活命的冒险——瞒产私分</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240713.md#1" target="_blank">神灵赐福 巴西一企业稳步发展壮大</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/14/n12475763.md#1">轮回转生名案：4岁娃难忘前生情 丈夫儿子来相认</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/9/30/n12440579.md#1">《圣经》与《推背图》预言的应验与变换2</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/9/3/n12378284.md#1">【西安事变?蒋宋夫妇】骑虎难下 叛将悔祸</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/23/n12498019.md#1">【微历史】解体苏共英雄 戈尔巴乔夫或叶利钦？</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/1/n12445922.md#1">【思想领袖】埃利斯：美多方面反制中共挑战</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/24/n12498253.md#1">【拍案惊奇】预期川普连任？北京发战争威胁</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/3/24/n11971400.md#1">最新翻墙软件 突破封锁访问大纪元新唐人</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/22/n12492665.md#1">【拍案惊奇】五中前习换将 共和党提灭共目标</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/22/n12494395.md#1">中国人涌向越南打工 中越边界将筑墙防外逃</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/21/n12492064.md#1">当年参选港姐拒嫁豪门 佘诗曼吐露真实心声</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/21/n12492237.md#1">周星驰否认对赌欠巨债 开启明星发声明新花样</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/22/n12495383.md#1">佟丽娅回应被陈奕迅女儿喜欢：开心一整天</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/23/n12496437.md#1">木村光希“舍不得丢” 中卫联名口罩成台湾之光</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/22/n12494921.md#1">Selina十年前拍戏烧伤 任爸讲述女儿重生秘辛</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/21/n12491843.md#1">早餐前喝咖啡 血糖影响50% 餐后喝或更好</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/21/n12492499.md#1">豆类是长寿必吃食材 黑豆、红豆4种豆各有益处</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/22/n12494541.md#1">百里香纯露中第一名 杀病菌、抗感冒 有神奇用法</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/23/n12496017.md#1">酷似德国总理 俄大妈曾获飞刀比赛世界冠军</a></li>
-<li><a href="https://github.com/cemvup3479/djy/blob/master/gb/20/10/22/n12493387.md#1">饿昏了？ 俄罗斯10只北极熊包围垃圾车</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cemvup3479/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cemvup3479/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/24/n12498883.htm">王友群：公安部副部长杨奇清被关秦城监狱之谜</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/24/n12498883.htm">王友群：公安部副部长杨奇清被关秦城监狱之谜</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cemvup3479/djy/blob/master/gb/20/10/24/n12498883.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cemvup3479/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cemvup3479/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cemvup3479/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cemvup3479/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cemvup3479/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/24/n12498883.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
